<resources>
    <string name="app_name">微计录</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="note">记录</string>
    <string name="plan">计划</string>
    <string name="timeline">时间轴</string>
    <string name="choose">选择图片</string>
    <string name="title">标题</string>
    <string name="text">内容</string>
    <string name="clear">清空图片</string>
    <string name="loading">加载中</string>
    <string name="share">分享</string>
    <string name="upend">倒放</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>


</resources>
